<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_low"
    android:orientation="vertical">

    <include layout="@layout/layout_image_text_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_med"
        android:text="@string/detail_links"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_med"
        android:orientation="horizontal">

        <Button
            android:id="@+id/detail_button_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_detail" />

        <Button
            android:id="@+id/detail_button_wiki"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_wiki" />

        <Button
            android:id="@+id/detail_button_comics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_comics" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_med"
        android:text="@string/detail_resources"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_med"
        android:orientation="horizontal">

        <Button
            android:id="@+id/detail_button_fragment_comics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_fragment_comics" />

        <Button
            android:id="@+id/detail_button_fragment_events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_fragment_events" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/detail_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>